syntax = "proto3";

option java_multiple_files = true;
option java_package = "ua.edu.university.grpc";
option java_outer_classname = "TransactionProto";

package transaction;

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse);
  rpc GetAccountTransactions(GetAccountTransactionsRequest) returns (TransactionListResponse);
  rpc UpdateTransactionStatus(UpdateStatusRequest) returns (TransactionResponse);
}

message CreateTransactionRequest {
  int64 accountId = 1;
  string type = 2;
  string amount = 3;
  string currency = 4;
  string description = 5;
}

message GetTransactionRequest {
  int64 id = 1;
}

message GetAccountTransactionsRequest {
  int64 accountId = 1;
}

message UpdateStatusRequest {
  int64 id = 1;
  string status = 2;
}

message TransactionResponse {
  int64 id = 1;
  int64 accountId = 2;
  string type = 3;
  string amount = 4;
  string currency = 5;
  string status = 6;
  string description = 7;
  string createdAt = 8;
}

message TransactionListResponse {
  repeated TransactionResponse transactions = 1;
}
